corrects flex alignment

--- a/css/index.css
+++ b/css/index.css
@@ -392,6 +392,9 @@ body {
   .product {
     flex-direction: row-reverse;
   }
+  .product-details {
+    align-items: flex-start;
+  }
   .product-image {
     width: 50%;
   }
